# notebooks

./: .coverage  .gitattributes  .gitignore  .jscpd.json  .pre-commit-config.yaml  AckerMan Function.ipynb  BrokenLinkChecker.ipynb  CHANGELOG.md  Coins_DoE.ipynb  EpidemicTestingAccuracy.ipynb  Expectations.ipynb  ExpectedOpportunityLoss.ipynb  Home.py  IMPLEMENTATION_PLAN.md  LICENSE  LogisticFunctionBehaviour.ipynb  MIGRATION_PLAN.md  MutualInformation.ipynb  Phase_Planes.ipynb  Pi approximation via Monte Carlo.ipynb  Playground.ipynb  README.md  Savings.ipynb  SigmoidVsExponential.ipynb  Sperners_Lemma.ipynb  TimeComplexityProfiling.ipynb  _config.yml  _toc.yml  compare_plan_vs_simulation.py  config_classes.ipynb  conftest.py  intro.md  opencode.json  prof_bec.prof  prof_delta.prof  prof_import_bec.prof  prof_joint_scan.prof  prof_omega_scan.prof  prof_twa.prof  pyproject.toml  (+1 more)
.streamlit/: config.toml
Calibration/: Playground.ipynb  Untitled.ipynb
DevOps/: MigratingClusters.ipynb
GraphTheory/: AStartAlgorithm.ipynb
HUUB/: Case_Study_Dataset.xlsx  exploratory_analysis.ipynb
Mathematica/: Examples.ipynb
Modelling/: ProductionLine.ipynb
NumericalAnalysis/: NumericalIntegration.ipynb
ProjectEuler/: 167.ipynb
Quantum/: FingerprintingQuantumMachinesWithQiskit.ipynb  FiniteDimentionalQuantumStateEvolution.ipynb  FourierTransform.ipynb  Grenoble.ipynb  InfiniteDoubleSquareWell.ipynb  Kronecker.ipynb  MachineLearningCatalysisOfQuantumTunneling.ipynb  Measurement Operators.ipynb  Metropolis-Hastings algorithm.ipynb  MetropolisHastingsAlgorithm.ipynb  MetropolisHastingsAppliedToADoublet.ipynb  Playground.ipynb  Plotting 1D waves.ipynb  QuantumErrorCorrectionWithQiskit.ipynb  QutipPlayground.ipynb  ReplicatingMachineLearningCatalysisOfQuantumTunneling.ipynb  Riemann.ipynb  SeabornVisualizationPlayground.ipynb  UnitConversion.ipynb  VariationalMonteCarlo.ipynb  VisualizeQuantumCircuits.ipynb  Visualizing Potentials.ipynb  VisualizingPotentials.ipynb
Scribbles/: AckerMan Function.ipynb  ApproximatingPIviaMonteCarlo.ipynb  BayesianUpdating.ipynb  BrokenLinkChecker.ipynb  DesktopOSMarketShare.ipynb  EpidemicTestingAccuracy.ipynb  Expectations.ipynb  ExpectedOpportunityLoss.ipynb  FunctionGrowthComparison.ipynb  GraphFlowAnalysis.ipynb  LargestPrimeDistribution.ipynb  LogisticFunctionBehaviour.ipynb  MedicalTestAccuracy.ipynb  MultiArmedBandit.ipynb  MutualInformation.ipynb  Numerai.ipynb  NumericalIntegration.ipynb  Phase_Planes.ipynb  Pi approximation via Monte Carlo.ipynb  ProductionLineOptimization.ipynb  SigmoidVsExponential.ipynb  SparseMatrixOperations.ipynb  SynapticPatternFormationDuringCellularRecognition.ipynb  TimeComplexityProfiling.ipynb  WebsocketsUsedOnTwoMillionCheckboxes.ipynb  segment_1.ipynb
Tournments/: Coins_DoE.ipynb  LiarsGame.ipynb
WIP/: Multi Armed Bandit.ipynb  Vaccines Validaty.ipynb
articles/: 2026-05-07-High-Order-Squeezing-Plan.md  2026-05-07-Physics-Reference.md  2026-05-09-Ancilla-Assisted-Metrology-Non-Markovian.md  2026-05-10-Interferometry-Scaling-Plan.md  2026-05-11-Ancilla-vs-System-Comparison.md  2026-05-11-Scaling-Survey-Advanced-Architectures.md  2026-05-11-Scaling-Survey-Collective-Spin.md  2026-05-11-Scaling-Survey-Fock-MZI.md  2026-05-12-Ancilla-Assisted-Metrology-Optimization.md  2026-05-12-Single-Particle-MZI-Holding-Time-Scaling.md  ancilla-drive-phase-modulated-metrology.md
docuspot/: Playground.ipynb
json/: jscpd-report.json
pages/: Ancilla_Drive_Metrology.py  Ancilla_Metrology_Optimization.py  Ancilla_vs_System_Comparison.py  BEC_Ancilla.py  BEC_Sensitivity_Scaling.py  Bayes_updates.py  Delta_Sensitivity_Heatmap.py  Delta_estimation.py  Energy_Level_Calculator.py  Fisher_information.py  Heisenberg_model.py  High_Order_Squeezing.py  Interferometry_Scaling_Survey.py  MZI_Ancilla.py  Minimize_heatmap.py  Numerical_Quantum_Time_Evolution.py  Probability_Distributions.py  Single_Particle_MZI_Scaling.py  Visualize_Partial_Trace.py  Wave_interference.py  __init__.py
reports/: 2026-05-07-High-Order-Squeezing-Plan.md  2026-05-07-Physics-Reference.md  2026-05-11-Ancilla-vs-System-Comparison.md  2026-05-11-Scaling-Survey-Collective-Spin.md  2026-05-11-Scaling-Survey-Fock-MZI.md  2026-05-12-Ancilla-Assisted-Metrology-Optimization.md  2026-05-12-Single-Particle-MZI-Holding-Time-Scaling.md  2026-05-15-Ancilla-Assisted-Metrology-Joint-Measurement.md  2026-05-18-Ancilla-Drive-Enhanced-Metrology.md  2026-05-18-Weighted-Joint-Measurement-NM-Generalization.md  2026-05-19-Ancilla-Drive-Phase-Modulated-Metrology.md
scripts/: check_placeholders.py  check_plt_cm.py
src/: __init__.py  algorithms.py  angular_momentum.py  bayesian_statistics.py  delta_estimation.py  enums.py  heisenberg_model.py  mzi_simulation.py  optimization.py  partial_trace.py  plotting.py  quantum_time_evolution.py  sensitivity_analysis.py  test_algorithms.py  test_algorithms_new.py  test_angular_momentum.py  test_angular_momentum_new.py  test_bayes_updates_new.py  test_bayesian_statistics.py  test_delta_estimation_new.py  test_delta_estimation_new_physics.py  test_enums.py  test_fisher_information_new.py  test_heisenberg_model_new.py  test_heisenberg_model_physics.py  test_mzi_simulation.py  test_optimization.py  test_partial_trace_physics.py  test_plotting.py  test_quantum_time_evolution.py  test_sensitivity_analysis.py  test_visualization.py  validators.py  visualization.py
src_notebooks/: algorithms.py  visualization.py
tests/: test_algorithms.py  test_algorithms_new.py  test_ancilla_comparison.py  test_ancilla_drive_phase_modulated.py  test_ancilla_joint_pipeline.py  test_angular_momentum.py  test_angular_momentum_new.py  test_architecture_lint.py  test_bayes_updates_new.py  test_bayesian_phase_estimation.py  test_bayesian_statistics.py  test_cavity_mzi.py  test_delta_estimation_new.py  test_delta_estimation_new_physics.py  test_dicke_basis.py  test_distributed_mzi.py  test_dynamical_decoupling.py  test_e2e_navigation.py  test_enums.py  test_fisher_information.py  test_fisher_information_new.py  test_heisenberg_model.py  test_heisenberg_model_physics.py  (+27 more)
(+3208 files in other folders)
