[tool.poetry]
name = "collapsedwave"
version = "0.1.0"
description = ""
authors = ["migueltorrescosta <miguelptcosta1995@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
bokeh = "^3.4.1"
dask = "^2024.12.1"
fastparquet = "^2024.2.0"
ipympl = "^0.9.3"
jupyter = "^1.0.0"
jupyter-cache = "^1.0.0"
jupyterlab = "^4.1.5"
lightgbm = "^4.3.0"
matplotlib = "^3.8.3"
mypy = "^1.9.0"
nbqa = "^1.8.5"
networkx = "^3.3"
nltk = "^3.9.1"
numba = "^0.60.0"
numerapi = "^2.18.0"
numpy = "^1.26.4"
nvidia-cudnn-cu11 = "^9.7.0.66"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"
plotly = "^5.24.1"
pylatexenc = "^2.10"
python = "^3.12"
qiskit = "^1.1.0"
qiskit-aer = "^0.13.3"
qiskit-algorithms = "^0.3.0"
qiskit-ibm-provider = "^0.10.0"
qiskit-ibm-runtime = "^0.22.0"
qutip = "^5.0.1"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
seaborn = "^0.13.2"
snakeviz = "^2.2.2"
streamlit = "^1.41.1"
sympy = "^1.12"
tensorflow = {version = "^2.18.0", extras = ["gpu"]}
torch = "^2.6.0"
torchaudio = "^2.2.2"
torchvision = "^0.21.0"
torchviz = "^0.0.3"
tqdm = "^4.66.2"
ncon = "^2.0.0"



[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pandas-stubs = "^2.2.1.240316"
pdflatex = "^0.1.3"
types-beautifulsoup4 = "^4.12.0.20240229"
types-requests = "^2.31.0.20240311"
types-seaborn = "^0.13.2.20240311"
types-tqdm = "^4.66.0.20240106"
jupyter-book = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
