[project]
name = "collapsedwave"
version = "0.1.0"
description = ""
authors = [{ name = "migueltorrescosta", email = "miguelptcosta1995@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "bokeh>=3.4.1,<4",
    "dask>=2024.12.1,<2025",
    "fastparquet>=2024.2.0,<2025",
    "ipympl>=0.9.3,<0.10",
    "jupyter>=1.0.0,<2",
    "jupyter-cache>=1.0.0,<2",
    "jupyterlab>=4.1.5,<5",
    "lightgbm>=4.3.0,<5",
    "matplotlib>=3.8.3,<4",
    "mypy>=1.9.0,<2",
    "nbqa>=1.8.5,<2",
    "networkx~=3.3",
    "nltk>=3.9.1,<4",
    "numba>=0.60.0,<0.61",
    "numerapi>=2.18.0,<3",
    "numpy>=1.26.4,<2",
    "nvidia-cudnn-cu11>=9.7.0.66,<10",
    "opencv-python>=4.9.0.80,<5",
    "pandas>=2.2.1,<3",
    "plotly>=5.24.1,<6",
    "pylatexenc~=2.10",
    "qiskit>=1.1.0,<2",
    "qiskit-aer>=0.13.3,<0.14",
    "qiskit-algorithms>=0.3.0,<0.4",
    "qiskit-ibm-provider>=0.10.0,<0.11",
    "qiskit-ibm-runtime>=0.22.0,<0.23",
    "qutip>=5.0.1,<6",
    "scikit-learn>=1.4.1.post1,<2",
    "scipy>=1.12.0,<2",
    "seaborn>=0.13.2,<0.14",
    "snakeviz>=2.2.2,<3",
    "streamlit>=1.41.1,<2",
    "sympy~=1.12",
    "tensorflow[gpu]>=2.18.0,<3",
    "torch>=2.6.0,<3",
    "torchaudio>=2.2.2,<3",
    "torchvision>=0.21.0,<0.22",
    "torchviz>=0.0.3,<0.0.4",
    "tqdm>=4.66.2,<5",
    "ncon>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "black>=24.3.0,<25",
    "pandas-stubs>=2.2.1.240316,<3",
    "pdflatex>=0.1.3,<0.2",
    "types-beautifulsoup4>=4.12.0.20240229,<5",
    "types-requests>=2.31.0.20240311,<3",
    "types-seaborn>=0.13.2.20240311,<0.14",
    "types-tqdm>=4.66.0.20240106,<5",
    "jupyter-book>=1.0.0,<2",
]
test = ["pytest>=8.2.0,<9"]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
