[project]
name = "collapsedwave"
version = "0.1.0"
description = ""
authors = [{ name = "migueltorrescosta", email = "miguelptcosta1995@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "bokeh>=3.4.1,<4",
    "dask>=2024.12.1,<2025",
    "fastparquet>=2024.2.0,<2025",
    "ipympl>=0.9.3,<0.10",
    "jupyter>=1.0.0,<2",
    "jupyter-cache>=1.0.0,<2",
    "jupyterlab>=4.1.5,<5",
    "lightgbm>=4.3.0,<5",
    "matplotlib>=3.8.3,<4",
    "mypy>=1.9.0,<2",
    "nbqa>=1.8.5,<2",
    "networkx~=3.3",
    "nltk>=3.9.1,<4",
    "numba>=0.60.0,<0.61",
    "numerapi>=2.18.0,<3",
    "numpy>=1.26.4,<2",
    "nvidia-cudnn-cu11>=9.7.0.66,<10",
    "opencv-python>=4.9.0.80,<5",
    "pandas>=2.2.1,<3",
    "plotly>=5.24.1,<6",
    "pylatexenc~=2.10",
    "qiskit>=1.1.0,<2",
    "qiskit-aer>=0.13.3,<0.14",
    "qiskit-algorithms>=0.3.0,<0.4",
    "qiskit-ibm-provider>=0.10.0,<0.11",
    "qiskit-ibm-runtime>=0.22.0,<0.23",
    "qutip>=5.0.1,<6",
    "scikit-learn>=1.4.1.post1,<2",
    "scipy>=1.12.0,<2",
    "seaborn>=0.13.2,<0.14",
    "snakeviz>=2.2.2,<3",
    "streamlit>=1.41.1,<2",
    "sympy~=1.12",
    "tensorflow[gpu]>=2.18.0,<3",
    "torch>=2.6.0,<3",
    "torchaudio>=2.2.2,<3",
    "torchvision>=0.21.0,<0.22",
    "torchviz>=0.0.3,<0.0.4",
    "tqdm>=4.66.2,<5",
    "pandas-stubs~=2.3.2",
    "scipy-stubs~=1.16.1",
]

[dependency-groups]
dev = [
    "black>=24.3.0,<25",
    "pandas-stubs>=2.2.1.240316,<3",
    "pdflatex>=0.1.3,<0.2",
    "types-beautifulsoup4>=4.12.0.20240229,<5",
    "types-requests>=2.31.0.20240311,<3",
    "types-seaborn>=0.13.2.20240311,<0.14",
    "types-tqdm>=4.66.0.20240106,<5",
    "jupyter-book>=1.0.0,<2",
    "pytest-testmon>=2.2.0",
]
test = ["pytest>=8.2.0,<9", "playwright>=1.42.0,<2"]

[tool.uv]
package = true
default-groups = [
    "dev",
    "test",
]

[tool.hatch]
build.targets.wheel.include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Ignore multiprocessing fork warning in tests
    "ignore::DeprecationWarning:multiprocessing",
    # Ignore ComplexWarning for now (handled by our fix)
    "ignore::numpy.exceptions.ComplexWarning",
]

[tool.ruff]
exclude = [
    "jupyter/**",
    "mathematica/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ── Type annotations (mypy handles more precisely) ──
    "ANN",
    # ── Docstring style — existing conventions sufficient ──
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D201", "D202", "D203", "D204", "D205", "D206", "D207", "D208",
    "D209", "D210", "D211", "D212", "D213", "D214", "D215",
    "D300", "D301",
    "D400", "D401", "D402", "D403", "D404", "D405", "D406", "D407", "D408",
    "D409", "D410", "D411", "D412", "D413", "D414", "D415", "D416", "D417",
    # ── Line-length / commas — ruff format handles ──
    "COM812", "E501",
    # ── Physics-domain naming conventions ──
    # N = particle number, T = temperature/time, J = angular momentum,
    # rho/psi/phi = density/state/phase, etc. are standard notation.
    "N802", "N803", "N806",   # Capital-letter variable/argument/function names
    "N815", "N816",           # Mixed-case in class/global scope
    # ── Unicode in physics code ──
    # Greek letters (θ, φ, ψ, ρ, χ, etc.) are standard notation.
    "RUF001", "RUF002", "RUF003",
    # ── Lazy imports in tests (deliberate pattern) ──
    "PLC0415",
    # ── Magic-value comparisons (common in physics assertions) ──
    "PLR2004",
    # ── Too opinionated / not applicable ──
    "EM",        # Exception message formatting
    "ERA",       # Commented-out code (development WIP)
    "FBT",       # Boolean trap
    "FIX",       # FIXME/TODO markers — essential in research code
    "SIM105",    # Suppressible exception (explicit try/except preferred)
    "SIM108",    # If-else → ternary (explicit branches preferred)
    "SIM117",    # Multiple with statements (nested readability)
    "S",         # Security — not applicable for simulation code
    "SLF",       # Self/private access
    "T20",       # print — extensively used in research test output
    "TD",        # TODO formatting — too opinionated for research code
    "TRY",       # try/except style
    # ── Patterns handled by intentional code design ──
    "ARG001", "ARG002", "ARG005",  # Unused args (API compatibility)
    "BLE001",                      # Blind except (intentional in test setup/scripts)
    "C901",                        # Complex code (needs refactor, not bug)
    "DTZ005",                      # Datetime tz — not applicable for simulations
    "N801",                        # Non-CapWords class name (legacy test classes)
    "N999",                        # Non-PEP8 module names (Streamlit page naming convention)
    "PLC2401",                     # Non-ASCII names (physics conventions)
    "PLR0911", "PLR0912", "PLR0913", "PLR0915",  # Complexity metrics
    "PLW0127",                     # Self-assignment (backward-compat aliases)
    "PLW2901",                     # Redefined loop variable (deliberate pattern)
    "PT011",                       # Pytest raises too broad (needs per-case review)
    "PT018",                       # Composite assertion (deliberate single-message pattern)
    # ── In-progress migrations ──
    "NPY002",    # NumPy legacy random — migrating gradually
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
exclude = []
warn_redundant_casts = true
show_error_codes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
